# fast_confusion_matrix

./: README.md  benchmarking.py  pyproject.toml
fast_confusion_matrix/: metrics.py
fast_confusion_matrix/tests/: test_metrics.py
