[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_confusion_matrix"
version = "0.1.0"
description = "Implementations for binary confusion matrix."
license = { text = "AGPL-3.0 license" }
requires-python = ">=3.9"

authors = [
  {email = "matthias.bruhns@posteo.de"},
  {name = "Matthias Bruhns"}
]

keywords = [
  "machine learning",
  "metrics"
]

classifiers = [
        "Development Status :: 1 - Planning",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU Affero General Public License v3",
        "Programming Language :: Python :: 3.9",
    ]

dependencies = [
    "numpy",
    "numba"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "scikit-learn" # Sklearn is only invoked for testing.
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma= true

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

#SOURCE: https://stackoverflow.com/a/76739181
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["fast_confusion_matrix"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)